2015-05-26  Andreas Tobler  <andreast@gcc.gnu.org>

	* testsuite/libjava.jni/jni.exp (gcj_jni_get_cxxflags_invocation): Add
	libiconv for FreeBSD to cxxflags.

2015-05-24  Eric Botcazou  <ebotcazou@adacore.com>

	* configure: Regenerate.

2015-05-13  Eric Botcazou  <ebotcazou@adacore.com>

	* configure.ac: Include config/sjlj.m4.
	Remove manual SJLJ check, add GCC_CHECK_SJLJ_EXCEPTIONS and adjust.
	* include/config.h.in: Regenerate.
	* exception.cc: Replace SJLJ_EXCEPTIONS by __USING_SJLJ_EXCEPTIONS__.
	* stacktrace.cc: Likewise.
	* include/default-signal.h: Likewise.
	* sysdep/i386/backtrace.h: Likewise.

2015-05-13  Michael Haubenwallner  <michael.haubenwallner@ssi-schaefer.com>

	* Makefile.in: Regenerated with automake-1.11.6.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* gcj/Makefile.in: Likewise.
	* include/Makefile.in: Likewise.
	* testsuite/Makefile.in: Likewise.

2015-01-29  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* libtool-version: Add a comment about cygwin.

2015-01-21  Matthias Klose  <doko@ubuntu.com>

	* libtool-version: Bump soversion.

2015-01-13  Jakub Jelinek  <jakub@redhat.com>

	PR libgcj/64219
	* Makefile.am (install-data-local): Use just the major version
	from GCJVERSION instead of major.minor.
	* Makefile.in: Regenerated.

2015-01-05  Jakub Jelinek  <jakub@redhat.com>

	* classpath/gnu/java/rmi/registry/RegistryImpl.java (version): Update
	copyright notice dates.
	* classpath/tools/gnu/classpath/tools/orbd/Main.java (run): Ditto.
	* gnu/gcj/convert/Convert.java (version): Update copyright notice
	dates.
	* gnu/gcj/tools/gcj_dbtool/Main.java (main): Ditto.

Copyright (C) 2015 Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.